--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+/*body {
   @apply bg-white text-black;
-}
+}*/
 
 body, html, * {
   font-family: 'Raleway', sans-serif !important;
