--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Telex&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    font-family: 'Raleway', sans-serif;
+  }
+}
+
 body {
   @apply bg-white text-[#2C3E50];
+  font-family: 'Raleway', sans-serif;
 }
 
 body, html, * {
-  font-family: 'Telex', sans-serif !important;
+  font-family: 'Raleway', sans-serif !important;
 }
 
 .hide-scrollbar::-webkit-scrollbar {
